--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         <div class="navbar-nav">
                             <a href="index.html" class="nav-link active text-warning">Home</a>
                             <a href="Movingoffers.html" class="nav-link text-warning">services</a>
-                            <a href="" class="nav-link text-warning">Fashion</a>
-                            <a href="" class="nav-link text-warning">Care giving</a>
+                            <a href="gallery.html" class="nav-link text-warning">gallery</a>
+                            
                         </div>
                     </div>
                 </nav>
@@ -50,10 +50,10 @@
                             <img src="Images/go.jpg" class="d-block w-100" alt="go" height="500px">
                         </div>
                         <div class="carousel-item">
-                            <img src="Images/caro1.jpeg" class="d-block w-100" alt="caro1" height="500px">
+                            <img src="Images/caroo.avif" class="d-block w-100" alt="caroo" height="500px">
                         </div>
                         <div class="carousel-item">
-                            <img src="Images/move.jpeg" class="d-block w-100" alt="move" height="500px">
+                            <img src="Images/caro7.avif" class="d-block w-100" alt="caro7" height="500px">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
