--- a/Movingoffers.html
+++ b/Movingoffers.html
@@ -23,19 +23,25 @@
                 <!-- parent nav containing all the content  -->
                 <nav class="navbar navbar-expand-md navbar-light">
                     <!-- brand  -->
-                    <a href="" class="navbar-brand text-success">Ahadi's deals</a>
+
+                    <a href=""><img src="Images/head.avif" width="20%" alt=""></a>
+                    <h1 class="text-success text-left">AHADI'S DEALS</h1>
                     <button class="navbar-toggler" data-bs-target="#navbarcollapse" data-bs-toggle="collapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <!-- a division containing our links -->
                     <div class="collapse navbar-collapse" id="navbarcollapse">
                         <div class="navbar-nav">
-                            <a href="index.html" class="nav-link active text-warning">Home</a>
-                            <a href="Movingoffers.html" class="nav-link text-warning">services</a>
-                            <a href="" class="nav-link text-warning">Fashion</a>
-                            <a href="" class="nav-link text-warning">Care giving</a>
+                        </div>
+                        <div class="ms-auto d-flex pe-2">
+                            <a href="index.html" class="nav-link active me-2 text-warning">Home</a>
+                            <a href="Movingoffers.html" class="nav-link me-2 text-warning">services</a>
+                            <a href="gallery.html" class="nav-link me-2 text-warning">gallery</a>
+
+
                         </div>
                     </div>
+
                 </nav>
             </div>
         </section>
@@ -121,40 +127,9 @@
         </section>
         <!-- end of section 2-->
         <!-- section 3 -->
-        <section class="row">
 
-            <h2 class="text-center bg-dark text-secondary">PROCESS OF MOVING</h2>
-            <!-- child 1 -->
-            <div class="col-md-3">
-                <!-- card shadow  -->
+        <h2 class="text-center text-success bg-dark"></h2>
 
-                <div class="card shadow text-center">
-                    <!-- card header  -->
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark ">packing services</h5>
-                    </div>
-                    <!-- card body  -->
-                    <div class="class-body">
-                        <img src="Images/boxes.avif" alt="boxes" width="100%">
-                    </div>
-                    <!-- card footer -->
-                    <div class="card-footer">
-                        <p class="text-dark">We fold the sheets for you..The sheets can be done at a good price per kg
-                            to be agreed on
-                            terms for us!!</p>
-                        <b class="text-warning">Ksh 800</b><br>
-                        <span class="badge bg-primary">19%off</span>
-                    </div>
-                </div>
-            </div>
-            <!-- child 2 -->
-            <div class="col-md-3">
-                <!-- card shadow  -->
-                <div class="card shadow text-center">
-                    <!-- card header  -->
-                    <div class="card-header"></div>
-                    <!-- section 1 -->
-        <h2 class="text-center text-success bg-dark">Furnitures</h2>
 
         <section class="row">
 
@@ -165,234 +140,84 @@
                 <div class="card shadow text-center">
                     <!-- card header  -->
                     <div class="class-header bg-success">
-                        <h5>furnitures</h5>
+                        <h5>International moving</h5>
                     </div>
                     <!-- card body -->
                     <div class="class-body">
-                        <img src="Images/2.jpg" alt="1" width="100%">
+                        <img src="Images/inter.avif" alt="inter" width="100%">
                     </div>
                     <!-- card footer  -->
                     <div class="class-footer">
-                        <p class="text-info">Easily packaged and reach the destination with no scraches to the sofa
+                        <p class="text-dark">Easily packaged and reach the destination with no scraches to
+                            the sofa
                             inquired..</p>
                         <b class="text-dark">Ksh 1,500</b><br>
                         <span class="badge bg-primary">30%off</span>
                     </div>
                 </div>
             </div>
+
             <!-- child 2 -->
             <div class="col-md-4">
                 <!-- card and shadow  -->
                 <div class="card shadow text-center">
                     <!-- card header  -->
                     <div class="class-header bg-success">
-                        <h5 class="bg-success">Benches</h5>
+                        <h5 class="bg-success">packing</h5>
 
 
                     </div>
                     <!-- card body  -->
                     <div class="class-body">
-                        <img src="Images/bench1.jpg" alt="bench1" width="100%">
+                        <img src="Images/fragi.avif" alt="fragi" width="100%">
                     </div>
                     <!-- card footer  -->
                     <div class="class-footer">
-                        <p class="text-info">The benches are relaxing mostly outdoors.It is hectic to put a bench on a
+                        <p class="text-dark">The benches are relaxing mostly outdoors.It is hectic to
+                            put a bench on a
                             motobike and
-                            deliver it it is unusual and not appropriate in many ways.....That's why we are here to make
+                            deliver it it is unusual and not appropriate in many ways.....That's why we
+                            are here to make
                             you happy.</p>
-                        <b class="text-dark">Ksh 1,500</b><br>
+                        <b class="text-dark">Ksh 500</b><br>
                         <span class="badge bg-primary">20%off</span>
                     </div>
                 </div>
 
 
             </div>
-            <div class="col-md-4">
 
-                <!-- child 3 -->
-                <!-- card and shadow  -->
-                <div class="card shadow text-center ">
+            <!-- child 3 -->
+            <!-- card and shadow  -->
+            <div class="card shadow text-center ">
+                <div class="col-md-4">
                     <!-- card header  -->
                     <div class="class-header">
-                        <h5 class="bg-success">Stools</h5>
+                        <h5 class="bg-success">Ware house moving</h5>
                     </div>
                     <!-- card body  -->
                     <div class="class-body">
-                        <img src="Images/stool.jpg" alt="stool" width="100%">
+                        <img src="Images/ware.avif" alt="ware" width="100%">
                     </div>
                     <!-- card footer  -->
                     <div class="class-footer">
-                        <p class="text-info">They are small sits that are portable to any place,,Enjoy our services.</p>
+                        <p class="text-dark">They are small sits that are portable to any place,,Enjoy
+                            our services.</p>
                         <b class="text-secondary">Ksh 1,400</b><br>
                         <span class="badge bg-primary">15%off</span>
                     </div>
                 </div>
+
+
+
+
+
+
+
             </div>
 
 
-            <hr>
+
         </section>
-        <!-- end of section 1 -->
-        <!-- section 2 -->
-        <section class="row">
-
-            <h2 class="text-center bg-dark text-secondary">Beddings</h2>
-            <!-- child 1 -->
-            <div class="col-md-3">
-                <!-- card shadow  -->
-
-                <div class="card shadow text-center">
-                    <!-- card header  -->
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark ">Bed sheets</h5>
-                    </div>
-                    <!-- card body  -->
-                    <div class="class-body">
-                        <img src="Images/sheets.jpg" alt="sheets" width="100%">
-                    </div>
-                    <!-- card footer -->
-                    <div class="card-footer">
-                        <p class="text-info">We fold the sheets for you..The sheets can be done at a good price per kg
-                            to be agreed on
-                            terms for us!!</p>
-                        <b class="text-warning">Ksh 800</b><br>
-                        <span class="badge bg-primary">19%off</span>
-                    </div>
-                </div>
-            </div>
-            <!-- child 2 -->
-            <div class="col-md-3">
-                <!-- card shadow  -->
-                <div class="card shadow text-center">
-                    <!-- card header  -->
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark">Pillows</h5>
-                    </div>
-                    <!-- card body  -->
-                    <div class="card-body">
-                        <img src="Images/pi.jpg" alt="pi" width="100%">
-                    </div>
-                    <!-- card footer  -->
-                    <div class="card-footer">
-                        <p class="text-info">Comfy and make the home comfortable for your family to enjoy..</p>
-                        <b class="text-info">Ksh 950</b><br>
-                        <span class="badge bg-primary">40%off</span>
-                    </div>
-                </div>
-            </div>
-            <!-- child 3 -->
-            <div class="col-md-3">
-                <!-- card shadow  -->
-                <div class="card shadow text-center">
-                    <!-- card header  -->
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark">Bed covers</h5>
-
-                    </div>
-                    <!-- card body  -->
-                    <div class="card-body">
-                        <img src="Images/44.jpg" alt="44" width="100%">
-                    </div>
-                    <!-- card footer  -->
-                    <div class="card-footer">
-                        <p class="text-info">Help reduce back strains and neck strains this don't seem like serious
-                            illnesses but they
-                            affect severely!!</p>
-                        <b class="text-danger">Ksh 400</b><br>
-                        <span class="badge bg-primary">5%off</span>
-                    </div>
-
-                </div>
-            </div>
-            <!-- child 4 -->
-            <div class="col-md-3">
-                <!-- card shadow  -->
-                <div class="card shadow">
-
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark">Mattresses</h5>
-
-                    </div>
-                    <!-- card body  -->
-                    <div class="card-body">
-                        <img src="Images/1.jpg" alt="1" width="100%">
-                    </div>
-                    <!-- card footer  -->
-                    <div class="card-footer">
-                        <p class="text-info">Are essencial to you and the comfort is quite relaxing for you...Come and
-                            seek for us we
-                            won't
-                            dissapoint....Mwaaaah!! </p>
-                        <b class="text-warning">Ksh 670</b><br>
-                        <span class="badge text-danger">17%off</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end of section 2 -->r">
-                        <h5 class="text-danger bg-dark">Pillows</h5>
-                    </div>
-                    <!-- card body  -->
-                    <div class="card-body">
-                        <img src="Images/pi.jpg" alt="pi" width="100%">
-                    </div>
-                    <!-- card footer  -->
-                    <div class="card-footer">
-                        <p class="text-info">Comfy and make the home comfortable for your family to enjoy..</p>
-                        <b class="text-info">Ksh 950</b><br>
-                        <span class="badge bg-primary">40%off</span>
-                    </div>
-                </div>
-            </div>
-            <!-- child 3 -->
-            <div class="col-md-3">
-                <!-- card shadow  -->
-                <div class="card shadow text-center">
-                    <!-- card header  -->
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark">Bed covers</h5>
-
-                    </div>
-                    <!-- card body  -->
-                    <div class="card-body">
-                        <img src="Images/44.jpg" alt="44" width="100%">
-                    </div>
-                    <!-- card footer  -->
-                    <div class="card-footer">
-                        <p class="text-info">Help reduce back strains and neck strains this don't seem like serious
-                            illnesses but they
-                            affect severely!!</p>
-                        <b class="text-danger">Ksh 400</b><br>
-                        <span class="badge bg-primary">5%off</span>
-                    </div>
-
-                </div>
-            </div>
-            <!-- child 4 -->
-            <div class="col-md-3">
-                <!-- card shadow  -->
-                <div class="card shadow">
-
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark">Mattresses</h5>
-
-                    </div>
-                    <!-- card body  -->
-                    <div class="card-body">
-                        <img src="Images/1.jpg" alt="1" width="100%">
-                    </div>
-                    <!-- card footer  -->
-                    <div class="card-footer">
-                        <p class="text-info">Are essencial to you and the comfort is quite relaxing for you...Come and
-                            seek for us we
-                            won't
-                            dissapoint....Mwaaaah!! </p>
-                        <b class="text-warning">Ksh 670</b><br>
-                        <span class="badge text-danger">17%off</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end of section 2 -->
-        
-        
+        <!-- end of section 3 -->
+        <hr>
