--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <!-- card footer  -->
                     <div class="class-footer">
-                        <p class="text-info">Easily packaged and reach the destination with no scraches to the sofa
+                        <p>Easily packaged and reach the destination with no scraches to the sofa
                             inquired..</p>
                         <b class="text-dark">Ksh 1,500</b><br>
                         <span class="badge bg-primary">30%off</span>
@@ -113,7 +113,7 @@
                     </div>
                     <!-- card footer  -->
                     <div class="class-footer">
-                        <p class="text-info">The benches are relaxing mostly outdoors.It is hectic to put a bench on a
+                        <p>The benches are relaxing mostly outdoors.It is hectic to put a bench on a
                             motobike and
                             deliver it it is unusual and not appropriate in many ways.....That's why we are here to make
                             you happy.</p>
@@ -139,7 +139,7 @@
                     </div>
                     <!-- card footer  -->
                     <div class="class-footer">
-                        <p class="text-info">They are small sits that are portable to any place,,Enjoy our services.</p>
+                        <p>They are small sits that are portable to any place,,Enjoy our services.</p>
                         <b class="text-secondary">Ksh 1,400</b><br>
                         <span class="badge bg-primary">15%off</span>
                     </div>
@@ -160,8 +160,8 @@
 
                 <div class="card shadow text-center">
                     <!-- card header  -->
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark ">Bed sheets</h5>
+                    <div class="card-header bg-dark">
+                        <h5 class="text-danger  ">Bed sheets</h5>
                     </div>
                     <!-- card body  -->
                     <div class="class-body">
@@ -169,7 +169,7 @@
                     </div>
                     <!-- card footer -->
                     <div class="card-footer">
-                        <p class="text-info">We fold the sheets for you..The sheets can be done at a good price per kg
+                        <p>We fold the sheets for you..The sheets can be done at a good price per kg
                             to be agreed on
                             terms for us!!</p>
                         <b class="text-warning">Ksh 800</b><br>
@@ -182,16 +182,16 @@
                 <!-- card shadow  -->
                 <div class="card shadow text-center">
                     <!-- card header  -->
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark">Pillows</h5>
+                    <div class="card-header bg-dark">
+                        <h5 class="text-danger">Pillows</h5>
                     </div>
                     <!-- card body  -->
                     <div class="card-body">
-                        <img src="Images/pi.jpg" alt="pi" width="100%">
+                        <img src="Images/good.avif" alt="good" width="100%">
                     </div>
                     <!-- card footer  -->
                     <div class="card-footer">
-                        <p class="text-info">Comfy and make the home comfortable for your family to enjoy..</p>
+                        <p>Comfy and make the home comfortable for your family to enjoy..</p>
                         <b class="text-info">Ksh 950</b><br>
                         <span class="badge bg-primary">40%off</span>
                     </div>
@@ -202,8 +202,8 @@
                 <!-- card shadow  -->
                 <div class="card shadow text-center">
                     <!-- card header  -->
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark">Bed covers</h5>
+                    <div class="card-header bg-dark">
+                        <h5 class="text-danger">Bed covers</h5>
 
                     </div>
                     <!-- card body  -->
@@ -212,7 +212,7 @@
                     </div>
                     <!-- card footer  -->
                     <div class="card-footer">
-                        <p class="text-info">Help reduce back strains and neck strains this don't seem like serious
+                        <p>Help reduce back strains and neck strains this don't seem like serious
                             illnesses but they
                             affect severely!!</p>
                         <b class="text-danger">Ksh 400</b><br>
@@ -226,8 +226,8 @@
                 <!-- card shadow  -->
                 <div class="card shadow">
 
-                    <div class="card-header">
-                        <h5 class="text-danger bg-dark">Mattresses</h5>
+                    <div class="card-header bg-dark">
+                        <h5 class="text-danger">Mattresses</h5>
 
                     </div>
                     <!-- card body  -->
@@ -236,7 +236,7 @@
                     </div>
                     <!-- card footer  -->
                     <div class="card-footer">
-                        <p class="text-info">Are essencial to you and the comfort is quite relaxing for you...Come and
+                        <p>Are essencial to you and the comfort is quite relaxing for you...Come and
                             seek for us we
                             won't
                             dissapoint....Mwaaaah!! </p>
@@ -257,8 +257,8 @@
 
 
                     <!-- card shadow  -->
-                    <div class="card-header">
-                        <h5 class="text-success bg-dark">cookers</h5>
+                    <div class="card-header bg-dark">
+                        <h5 class="text-success">cookers</h5>
                     </div>
                     <!-- card body  -->
                     <div class="card-body">
@@ -275,10 +275,10 @@
             <!-- child 2 -->
             <div class="col-md-6">
                 <!-- card shadow  -->
-                <div class="card shadow">
+                <div class="card shadow  bg-dark">
 
                     <div class="card-header">
-                        <h5 class="text-secondary bg-dark">utensils</h5>
+                        <h5 class="text-secondary">utensils</h5>
                     </div>
                     <div>
                         <div class="col-md-6"></div>
@@ -311,9 +311,9 @@
                     
 
                         <!-- card header  -->
-                        <div class="card-header">
+                        <div class="card-header bg-dark">
 
-                            <h2 class="text-secondary bg-dark">towels</h2>
+                            <h2 class="text-secondary">towels</h2>
                         </div>
                         <!-- card body  -->
                         <div class="card-body">
@@ -333,10 +333,10 @@
             <!-- child 2 -->
             <div class="col-md-6">
                 <!-- card shadow  -->
-                <div class="card shadow text-center">
+                <div class="card shadow text-center bg-dark">
                     <!-- card header  -->
                     <div>
-                        <h2 class="text-secondary bg-dark">Personal stuff</h2>
+                        <h2 class="text-secondary">Personal stuff</h2>
                     </div>
 
                 </div>
@@ -367,8 +367,8 @@
 
             <div class="card shadow text-center">
                 <!-- card header  -->
-                <div class="card-header">
-                    <h5 class="text-danger bg-dark ">cussions</h5>
+                <div class="card-header bg-dark">
+                    <h5 class="text-danger ">cussions</h5>
                 </div>
                 <!-- card body  -->
                 <div class="class-body">
@@ -389,8 +389,8 @@
             <!-- card shadow  -->
             <div class="card shadow text-center">
                 <!-- card header  -->
-                <div class="card-header">
-                    <h5 class="text-danger bg-dark">mats</h5>
+                <div class="card-header bg-dark">
+                    <h5 class="text-danger ">mats</h5>
                 </div>
                 <!-- card body  -->
                 <div class="card-body">
@@ -409,8 +409,8 @@
             <!-- card shadow  -->
             <div class="card shadow text-center">
                 <!-- card header  -->
-                <div class="card-header">
-                    <h5 class="text-danger bg-dark">covers</h5>
+                <div class="card-header bg-dark">
+                    <h5 class="text-danger">covers</h5>
 
                 </div>
                 <!-- card body  -->
@@ -431,10 +431,10 @@
         <!-- child 4 -->
         <div class="col-md-3">
             <!-- card shadow  -->
-            <div class="card shadow">
+            <div class="card shadow bg-dark">
 
                 <div class="card-header">
-                    <h5 class="text-danger bg-dark">Carpets</h5>
+                    <h5 class="text-danger ">Carpets</h5>
 
                 </div>
                 <!-- card body  -->
@@ -476,12 +476,13 @@
             <div class="col-md-4">
                 <h2 class="text-center text-white">Stay Connected</h2>
                 <a href="">
-                    <img src="Images/fb.jpeg" alt="fb">
+                    <img src="Images/fb.png" alt="fb">
                     <a href="">
-                        <img src="Images/ig.jpeg" alt="ig">
+                        <img src="Images/in.png" alt="in">
                     </a>
                     <a href="">
-                        <img src="Images/x.jpeg" alt="x" >
+                        <img src="Images/x.png" alt="x
+                        " >
 
                     </a>
                 </a>
